--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
   "require": {
     "php": ">=5.3"
   },
+  "psr-4": {
+      "SerasaSOAWeb\\": "src/"
+    }
   "authors": [
     {
       "name": "Angelo Biscola",
